--- a/BlazorPeliculas/Client/wwwroot/index.html
+++ b/BlazorPeliculas/Client/wwwroot/index.html
@@ -7,6 +7,8 @@
     <title>BlazorPeliculas</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorPeliculas.Client.styles.css" rel="stylesheet" />
